Fri Mar 27 21:22:42 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Exec_Source_Traits.cpp:

          . Bug fix where the distribution mapping was incorrect.

Wed Mar 18 22:53:47 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/workers/CPU/CUTS_CPU_Worker.xme:
        * cuts/workers/Test_Logger/TestLogger.xme:

          . Updated the binaries to the latest version of PICML.

        * install/CUTS_CoSMIC.wxs:
        * install/CUTS_PICML.wxs:

          . The installer now includes the WML models for the
            TestLogger and CPU workload generators.

Wed Mar 18 22:28:12 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * install/CUTS_PICML.wxs:

          . Disabled installation of several code generators.

          . The PICML shared libraries are now installed with CUTS
            to decouple the CUTS installer from the CoSMIC installer.
            You still have to install CoSMIC to install the PICML
            paradigm.

Mon Mar 16 16:44:13 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/UNITE:
        * examples/UNITE/example.unite:

          . Example configuration file for UNITE.

Mon Mar 16 14:32:41 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/cuts_cosmic.mpb:

          . Removed the requires_modeling base project.

        * cuts/utils/unite/Unit_Test_Evaluator.h:

          . Added Doxygen comments to the header file.

Mon Mar 16 04:34:09 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/unite/Log_Format_Data_Entry.h:
        * cuts/utils/unite/Log_Format_Data_Entry.cpp:
        * cuts/utils/unite/Unit_Test_Evaluator.h:
        * cuts/utils/unite/Unit_Test_Evaluator.cpp:
        * cuts/utils/unite/Unite_App.cpp:

          . Re-designed the evaluator such that for a give test
            database, a single variable database is created. Each